--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
     "start": "next start",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "cron": "npx ts-node src/server/cron-server.ts"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.12.0",
@@ -27,11 +28,13 @@
     "@trpc/server": "^11.0.0",
     "drizzle-orm": "^0.41.0",
     "next": "^15.2.3",
+    "node-cron": "^4.1.1",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "ts-node": "^10.9.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
