--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "preview": "next build && next start",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "cron": "npx ts-node src/server/cron-server.ts"
+    "cron": "npx tsx src/server/cron-server.ts"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.12.0",
@@ -35,6 +35,7 @@
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
