--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "preview": "next build && next start",
     "start": "next start",
     "typecheck": "tsc --noEmit",
-    "cron": "npx tsx src/server/cron-server.ts"
+    "cron": "npx tsx --tsconfig ./tsconfig.json src/server/cron-server.ts"
   },
   "dependencies": {
     "@t3-oss/env-nextjs": "^0.12.0",
@@ -26,6 +26,7 @@
     "@trpc/client": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "dotenv": "^16.5.0",
     "drizzle-orm": "^0.41.0",
     "next": "^15.2.3",
     "node-cron": "^4.1.1",
